LoanType letter mapping master.